infrastructure/system/cilium-system/base/dmz-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dmz-gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 172.31.50.254
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.dmz.sbling.net"
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.dmz.sbling.net"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: dmz-sbling-net-prod-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dmz-tls-redirect
spec:
  parentRefs:
    - name: dmz-gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
