infrastructure/system/cilium-system/base/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 172.31.50.129
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.sbling.net"
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.sbling.net"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: sbling-net-prod-cert-ext
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 302
            port: 443
      matches:
        - path:
            type: PathPrefix
            value: /
